light mode > dark mode

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,18 +1,26 @@
-# default shell
+#default shell
 set-option -g default-shell /bin/zsh
 
 # mouse friendly
 set -g mouse on
 
-# bind leader key to C-\
+# bind leader key to C-a
 # and add friendlier keybindings
 unbind C-b
-set-option -g prefix 'C-\'
+set-option -g prefix 'C-a'
 bind-key C-x send-prefix
 bind | split-window -h
 bind - split-window -v
 unbind '"'
 unbind %
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+## get rid of date time
+set -g status-right ''
+set -g status-right-length 0
 
 # vim keybindings
 setw -g mode-keys vi
@@ -29,14 +37,13 @@ set -sg escape-time 0
 set -g default-terminal screen-256color
 set -g terminal-overrides ",alacritty:RGB"
 
-# for iterm2
-#set -g default-terminal "screen-256color"
-#set-option -ga terminal-overrides ",xterm-256color:Tc"
-
 
 # dracula theme
-set -g @plugin 'dracula/tmux'
-set -g @dracula-show-weather false
+#set -g @plugin 'dracula/tmux'
+#set -g @dracula-show-weather false
+
+set -g @plugin 'mattdavis90/base16-tmux'
+set -g @colors-base16 'google-dark'
 
 # tpm configs
 run -b '~/.tmux/plugins/tpm/tpm'
