made up my mind about dracula

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,11 +39,11 @@ set -g terminal-overrides ",alacritty:RGB"
 
 
 # dracula theme
-#set -g @plugin 'dracula/tmux'
-#set -g @dracula-show-weather false
+set -g @plugin 'dracula/tmux'
+set -g @dracula-show-weather false
 
-set -g @plugin 'mattdavis90/base16-tmux'
-set -g @colors-base16 'google-dark'
+#set -g @plugin 'mattdavis90/base16-tmux'
+#set -g @colors-base16 'google-dark'
 
 # tpm configs
 run -b '~/.tmux/plugins/tpm/tpm'
