--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -171,73 +171,73 @@ font:
 #draw_bold_text_with_bright_colors: false
 
 # Colors (Dracula)
-# colors:
-#   # Default colors
-#   primary:
-#     background: '0x282a36'
-#     foreground: '0xf8f8f2'
+colors:
+  # Default colors
+  primary:
+    background: '0x282a36'
+    foreground: '0xf8f8f2'
 
-#     # Bright and dim foreground colors
-#     #
-#     # The dimmed foreground color is calculated automatically if it is not present.
-#     # If the bright foreground color is not set, or `draw_bold_text_with_bright_colors`
-#     # is `false`, the normal foreground color will be used.
-#     #dim_foreground: '0x9a9a9a'
-#     #bright_foreground: '0xffffff'
+    # Bright and dim foreground colors
+    #
+    # The dimmed foreground color is calculated automatically if it is not present.
+    # If the bright foreground color is not set, or `draw_bold_text_with_bright_colors`
+    # is `false`, the normal foreground color will be used.
+    #dim_foreground: '0x9a9a9a'
+    #bright_foreground: '0xffffff'
 
-#   # Cursor colors
-#   #
-#   # Colors which should be used to draw the terminal cursor. If these are unset,
-#   # the cursor color will be the inverse of the cell color.
-#   cursor:
-#     text: '0x44475a'
-#     cursor: '0xf8f8f2'
+  # Cursor colors
+  #
+  # Colors which should be used to draw the terminal cursor. If these are unset,
+  # the cursor color will be the inverse of the cell color.
+  cursor:
+    text: '0x44475a'
+    cursor: '0xf8f8f2'
 
-#   # Normal colors
-#   normal:
-#     black:   '0x000000'
-#     red:     '0xff5555'
-#     green:   '0x50fa7b'
-#     yellow:  '0xf1fa8c'
-#     blue:    '0xbd93f9'
-#     magenta: '0xff79c6'
-#     cyan:    '0x8be9fd'
-#     white:   '0xbfbfbf'
+  # Normal colors
+  normal:
+    black:   '0x000000'
+    red:     '0xff5555'
+    green:   '0x50fa7b'
+    yellow:  '0xf1fa8c'
+    blue:    '0xbd93f9'
+    magenta: '0xff79c6'
+    cyan:    '0x8be9fd'
+    white:   '0xbfbfbf'
 
-#   # Bright colors
-#   bright:
-#     black:   '0x4d4d4d'
-#     red:     '0xff6e67'
-#     green:   '0x5af78e'
-#     yellow:  '0xf4f99d'
-#     blue:    '0xcaa9fa'
-#     magenta: '0xff92d0'
-#     cyan:    '0x9aedfe'
-#     white:   '0xe6e6e6'
+  # Bright colors
+  bright:
+    black:   '0x4d4d4d'
+    red:     '0xff6e67'
+    green:   '0x5af78e'
+    yellow:  '0xf4f99d'
+    blue:    '0xcaa9fa'
+    magenta: '0xff92d0'
+    cyan:    '0x9aedfe'
+    white:   '0xe6e6e6'
 
-#   # Dim colors
-#   #
-#   # If the dim colors are not set, they will be calculated automatically based
-#   # on the `normal` colors.
-#   dim:
-#     black:   '0x14151b'
-#     red:     '0xff2222'
-#     green:   '0x1ef956'
-#     yellow:  '0xebf85b'
-#     blue:    '0x4d5b86'
-#     magenta: '0xff46b0'
-#     cyan:    '0x59dffc'
-#     white:   '0xe6e6d1'
+  # Dim colors
+  #
+  # If the dim colors are not set, they will be calculated automatically based
+  # on the `normal` colors.
+  dim:
+    black:   '0x14151b'
+    red:     '0xff2222'
+    green:   '0x1ef956'
+    yellow:  '0xebf85b'
+    blue:    '0x4d5b86'
+    magenta: '0xff46b0'
+    cyan:    '0x59dffc'
+    white:   '0xe6e6d1'
 
-#   # Indexed Colors
-#   #
-#   # The indexed colors include all colors from 16 to 256.
-#   # When these are not set, they're filled with sensible defaults.
-#   #
-#   # Example:
-#   #   `- { index: 16, color: '0xff00ff' }`
-#   #
-#   indexed_colors: []
+  # Indexed Colors
+  #
+  # The indexed colors include all colors from 16 to 256.
+  # When these are not set, they're filled with sensible defaults.
+  #
+  # Example:
+  #   `- { index: 16, color: '0xff00ff' }`
+  #
+  indexed_colors: []
 
 
 # Colors (Tomorrow Night Bright)
@@ -350,46 +350,46 @@ font:
 #     white:   '#ffffff'
 
 # Base16 Google Light
-colors:
-  # Default colors
-  primary:
-    background: '0xffffff'
-    foreground: '0x373b41'
+# colors:
+#   # Default colors
+#   primary:
+#     background: '0xffffff'
+#     foreground: '0x373b41'
 
-  # Colors the cursor will use if `custom_cursor_colors` is true
-  cursor:
-    text: '0xffffff'
-    cursor: '0x373b41'
+#   # Colors the cursor will use if `custom_cursor_colors` is true
+#   cursor:
+#     text: '0xffffff'
+#     cursor: '0x373b41'
 
-  # Normal colors
-  normal:
-    black:   '0xffffff'
-    red:     '0xcc342b'
-    green:   '0x198844'
-    yellow:  '0xfba922'
-    blue:    '0x3971ed'
-    magenta: '0xa36ac7'
-    cyan:    '0x3971ed'
-    white:   '0x373b41'
+#   # Normal colors
+#   normal:
+#     black:   '0xffffff'
+#     red:     '0xcc342b'
+#     green:   '0x198844'
+#     yellow:  '0xfba922'
+#     blue:    '0x3971ed'
+#     magenta: '0xa36ac7'
+#     cyan:    '0x3971ed'
+#     white:   '0x373b41'
 
-  # Bright colors
-  bright:
-    black:   '0xb4b7b4'
-    red:     '0xcc342b'
-    green:   '0x198844'
-    yellow:  '0xfba922'
-    blue:    '0x3971ed'
-    magenta: '0xa36ac7'
-    cyan:    '0x3971ed'
-    white:   '0x1d1f21'
+#   # Bright colors
+#   bright:
+#     black:   '0xb4b7b4'
+#     red:     '0xcc342b'
+#     green:   '0x198844'
+#     yellow:  '0xfba922'
+#     blue:    '0x3971ed'
+#     magenta: '0xa36ac7'
+#     cyan:    '0x3971ed'
+#     white:   '0x1d1f21'
 
-  indexed_colors:
-    - { index: 16, color: '0xf96a38' }
-    - { index: 17, color: '0x3971ed' }
-    - { index: 18, color: '0xe0e0e0' }
-    - { index: 19, color: '0xc5c8c6' }
-    - { index: 20, color: '0x969896' }
-    - { index: 21, color: '0x282a2e' }
+#   indexed_colors:
+#     - { index: 16, color: '0xf96a38' }
+#     - { index: 17, color: '0x3971ed' }
+#     - { index: 18, color: '0xe0e0e0' }
+#     - { index: 19, color: '0xc5c8c6' }
+#     - { index: 20, color: '0x969896' }
+#     - { index: 21, color: '0x282a2e' }
 
 
 
