--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -461,10 +461,10 @@ background_opacity: 1.0
 #   - (Windows) powershell
 shell:
   program: /bin/zsh
-  args:
-    - -l
-    - -c
-    - "tmux attach || tmux -2"
+#  args:
+#    - -l
+#    - -c
+#    - "tmux attach || tmux -2"
 
 # Startup directory
 #
@@ -677,6 +677,7 @@ key_bindings:
   #- { key: F,      mods: Command|Control, action: ToggleFullscreen }
   - { key: X,      mods: Alt, chars: "\x1bx"   }
   - { key: Slash,      mods: Alt, chars: "\x1b\x2f"   }
+  - { key: N, mods: Command, action: SpawnNewInstance }
 
   #- { key: Paste,                    action: Paste                            }
   #- { key: Copy,                     action: Copy                             }
