--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,8 +9,8 @@ set -g mouse on
 unbind C-b
 set-option -g prefix 'C-a'
 bind-key C-x send-prefix
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
 bind h select-pane -L
