--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -97,7 +97,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: Meslo LG M DZ for Powerline
+    family: Menlo
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
@@ -423,7 +423,8 @@ colors:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 1.0
+window:
+   opacity: 1.0
 
 #selection:
   #semantic_escape_chars: ",│`|:\"' ()[]{}<>\t"
@@ -461,10 +462,10 @@ background_opacity: 1.0
 #   - (Windows) powershell
 shell:
   program: /bin/zsh
-#  args:
-#    - -l
-#    - -c
-#    - "tmux attach || tmux -2"
+  args:
+    - -l
+    - -c
+    - "tmux attach || tmux -2"
 
 # Startup directory
 #
